# Nice-Pass-capcha-solver

./: .gitignore  README.md
assets/: report.txt
assets/prototypes/: cunning_status.txt  protos_dump.txt
js/: package.json
js/src/: captcha.js  main.js
python/src/: captcha.py  main.py
rust/: Cargo.toml
rust/src/: captcha.rs  main.rs
